@@ -11,7 +11,8 @@ import vltest_bootstrap
 
 test.scenarios('simulator')
 
-test.compile()
+# Coverage for Issue #5920
+test.compile(verilator_flags2=['--coverage-line'])
 
 test.execute()
 
