@@ -72,6 +72,7 @@ Verilator 5.035 devel
 * Fix `new this` (#5909).
 * Fix LATCH warning for automatic variables (#5918). [Yutetsu TAKATSUKASA]
 * Fix %% on elaboration severity tasks (#5922). [Ethan Sifferman]
+* Fix port default values with `--coverage-line` creating `0=0` (#5920). [Drew Ranck]
 
 
 Verilator 5.034 2025-02-24
